// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`maybe_return.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function getScaledData({x}): ?{foo: number} {}

=====================================output=====================================
function getScaledData({ x }): ?{ foo: number } {}

================================================================================
`;

exports[`prettier-ignore.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type A = {
  // prettier-ignore
  +input: ?(?B),
}

=====================================output=====================================
type A = {
  // prettier-ignore
  +input: ?(?B),
};

================================================================================
`;
